--- a/404.html
+++ b/404.html
@@ -2,9 +2,9 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="0; url=https://t.me/+EaXvzH7iSTk3ZGQ1">
+        <meta http-equiv="refresh" content="0; url=https://t.me/+bjK_ytXZo9MxMGE1">
         <script type="text/javascript">
-            window.location.href = "https://t.me/+EaXvzH7iSTk3ZGQ1"
+            window.location.href = "https://t.me/+bjK_ytXZo9MxMGE1"
         </script>
         <title>Page Redirection</title>
     </head>
